Configures travis to run tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ compiler:
 before_install:
   - echo $LANG
   - echo $LC_ALL
-script: make
+script: make && make test
 branches:
   only:
     - master
