--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,20 @@ notifications:
   email:
     on_success: change
     on_failure: always
-env:
-  - LANG="en_US.UTF-8"
 os:
   - linux
+env:
+  - LANG="en_US.UTF-8"
+  global:
+   # The next declaration is the encrypted COVERITY_SCAN_TOKEN, created
+   #   via the "travis encrypt" command using the project repo's public key
+   - secure: "NNcM7iZYDdtdR894s1wqnQ7W1keMbnsItTm4gbLTsZomXDVu3Q3XpkNS8ixwMTixnkawSCsK223W9txTFCtpNcq5QClJG3akCidYq92JyuiGBh50Y3z+kJAHPL1mPCm80mSKKuLHlywJJiVjItvbNlj7j6YRO1R6sJQploFrkKc="
+addons:
+  coverity_scan:
+    project:
+      name: "dhiana/testcpp"
+      description: "Build submitted via Travis CI"
+    notification_email: dhiana.deva@gmail.com
+    build_command_prepend: "make clean"
+    build_command:   "make test -j 4"
+    branch_pattern: master
